--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,11 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@import url('https://fonts.googleapis.com/css2?family=Rancho&display=swap');
+
+
+@plugin "daisyui" {
+    themes: light --default, dark --prefersdark;
+    themes: light --default;
+   }
+   *{
+    font-family: "Rancho", cursive;
+   }
